attic/old_tests/xml/invalidxml/obsTime/badtime2.xml.README
badtime2.xml BAD because obsTime must not have time zone
